Wed Aug 30 19:15:29 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Partially implemented type-checking in OmIndexer

Wed Aug 30 18:21:02 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add a test to the quartz testsuite - currently doesn't compile.

Wed Aug 30 17:50:42 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Make OmWritableDatabase::get_document() into a const method -
	  doesn't change anything.

Wed Aug 30 15:10:09 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Put guards in indexergraph header file to make it empty if
	  libxml is not available.  (For includetest)

Wed Aug 30 15:10:00 BST 2000 Olly Betts

	* Added guards to sleepycat headers so that they are empty if
	  sleepycat is disabled - this is to make includetest pass.

Wed Aug 30 14:49:00 BST 2000 Olly Betts

	* tests/Makefile.am: use ${srcdir} to find sources for extra CXXFLAGS
	  rules so compiling outside the source tree works.

Wed Aug 30 14:34:07 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Put in guards to headerfiles in quartz so that the files are
	  empty if quartz isn't configured on - this is to make includetest
	  pass.

Wed Aug 30 14:13:19 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add a quartztest testsuite in the Quartz database directory.  That
	  should save me some compile time...

Wed Aug 30 12:49:00 BST 2000 Olly Betts

	* apitest: declare tests static - we then get a warning when a test
	  isn't used and it may speed up linking.

Wed Aug 30 12:34:23 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Now pass query length information in remote matches.

	* Incremented remote protocol version.

Wed Aug 30 11:03:11 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Bug fixes to the modified indexing framework mini-test

Wed Aug 30 10:37:00 BST 2000 Olly Betts

	* tests/Makefile.am: use CXXCOMPILE and LTCXXCOMPILE for compiling
	  with extra CXXFLAGS.
